--- a/adaptive_app/step_06/android/app/src/main/AndroidManifest.xml
+++ b/adaptive_app/step_06/android/app/src/main/AndroidManifest.xml
@@ -45,4 +45,15 @@
             <data android:mimeType="*/*" />
         </intent>
     </queries>
+    <!-- Required to query activities that can process text, see:
+         https://developer.android.com/training/package-visibility?hl=en and
+         https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
+
+         In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.PROCESS_TEXT"/>
+            <data android:mimeType="text/plain"/>
+        </intent>
+    </queries>
 </manifest>
