--- a/adaptive_app/step_06/yt_cors_proxy/pubspec.yaml
+++ b/adaptive_app/step_06/yt_cors_proxy/pubspec.yaml
@@ -3,10 +3,10 @@ description: A YouTube CORS Proxy Server.
 version: 1.0.0
 
 environment:
-  sdk: ^3.2.3
+  sdk: ^3.3.0-279.2.beta
 
 dependencies:
-  http: ^1.1.2
+  http: ^1.2.0
   shelf: ^1.4.0
   shelf_cors_headers: ^0.1.5
 
