--- a/ffigen_codelab/step_05/android/build.gradle
+++ b/ffigen_codelab/step_05/android/build.gradle
@@ -29,9 +29,9 @@ android {
         namespace 'com.example.ffigen_app'
     }
 
-    // Bumping the plugin compileSdkVersion requires all clients of this plugin
+    // Bumping the plugin compileSdk version requires all clients of this plugin
     // to bump the version in their app.
-    compileSdkVersion 33
+    compileSdk 34
 
     // Use the NDK version
     // declared in /android/app/build.gradle file of the Flutter project.
