--- a/ffigen_codelab/step_07/example/pubspec.yaml
+++ b/ffigen_codelab/step_07/example/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.0-279.2.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,7 +41,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.4.9
   freezed_annotation: ^2.4.1
   google_fonts: ^6.1.0
@@ -55,8 +55,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
-  build_runner: ^2.4.7
+  flutter_lints: ^3.0.0
+  build_runner: ^2.4.8
   freezed: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
