--- a/ffigen_codelab/step_07/pubspec.yaml
+++ b/ffigen_codelab/step_07/pubspec.yaml
@@ -4,21 +4,21 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.0-279.2.beta <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
-  ffi: ^2.1.0
+  ffi: ^2.1.2
   flutter:
     sdk: flutter
-  path: ^1.8.3
+  path: ^1.9.0
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
   ffigen: ^11.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
