--- a/firebase-auth-flutterfire-ui/complete/pubspec.yaml
+++ b/firebase-auth-flutterfire-ui/complete/pubspec.yaml
@@ -4,13 +4,13 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.0-279.2.beta <4.0.0'
 
 dependencies:
-  firebase_auth: ^4.16.0
-  firebase_core: ^2.24.2
-  firebase_ui_auth: ^1.12.0
-  firebase_ui_oauth_google: ^1.2.16
+  firebase_auth: ^4.17.2
+  firebase_core: ^2.25.2
+  firebase_ui_auth: ^1.12.1
+  firebase_ui_oauth_google: ^1.2.17
   flutter:
     sdk: flutter
   google_sign_in: ^6.2.1
@@ -18,7 +18,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
