--- a/github-client/window_to_front/pubspec.yaml
+++ b/github-client/window_to_front/pubspec.yaml
@@ -18,7 +18,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.0-279.2.beta <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
@@ -29,7 +29,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
