--- a/google-maps-in-flutter/step_5/android/app/build.gradle
+++ b/google-maps-in-flutter/step_5/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.google_maps_in_flutter"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
