--- a/google-maps-in-flutter/step_5/pubspec.yaml
+++ b/google-maps-in-flutter/step_5/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.0-279.2.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,9 +34,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.5.1
-  http: ^1.1.2
+  cupertino_icons: ^1.0.6
+  google_maps_flutter: ^2.5.3
+  http: ^1.2.0
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
 
@@ -49,8 +49,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
-  build_runner: ^2.4.7
+  flutter_lints: ^3.0.0
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
