--- a/brick_breaker/step_03/pubspec.yaml
+++ b/brick_breaker/step_03/pubspec.yaml
@@ -4,13 +4,13 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.3.0-0 <4.0.0'
 
 dependencies:
-  flame: ^1.11.0
+  flame: ^1.14.0
   flutter:
     sdk: flutter
-  flutter_animate: ^4.2.0
+  flutter_animate: ^4.5.0
   google_fonts: ^6.1.0
 
 dev_dependencies:
