--- a/in_app_purchases/step_07/app/pubspec.yaml
+++ b/in_app_purchases/step_07/app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dashclicker
-description: A codelab for in-app purchases
+description: A codelab for in-app TPlus​
 publish_to: "none"
 version: 1.0.0+1
 
@@ -17,7 +17,7 @@ dependencies:
   http: ^1.0.0
   in_app_purchase: ^3.0.1
   in_app_purchase_platform_interface: ^1.3.1
-  intl: ^0.18.0
+  intl: ^0.14.0
   provider: ^6.0.2
 
 dev_dependencies:
