--- a/generate_crossword/step_03/analysis_options.yaml
+++ b/generate_crossword/step_03/analysis_options.yaml
@@ -3,3 +3,7 @@ include: ../../analysis_options.yaml
 analyzer:
   plugins:
     - custom_lint
+
+linter:
+  rules:
+    prefer_const_constructors: false
