--- a/generate_crossword/step_04/pubspec.yaml
+++ b/generate_crossword/step_04/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.0-190.1.beta <4.0.0'
+  sdk: '>=3.3.3 <4.0.0'
 
 dependencies:
   built_collection: ^5.1.1
