--- a/tooling/codelab_rebuild/pubspec.yaml
+++ b/tooling/codelab_rebuild/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   json_annotation: ^4.8.0
   logging: ^1.0.2
   path: ^1.8.0
+  xml: ^6.5.0
 
 dev_dependencies:
   build_runner: ^2.3.3
