--- a/forge2d_game/step_06/pubspec.yaml
+++ b/forge2d_game/step_06/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
+  intl: ^0.19.0
   riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
 
