Drop `groupSpriteNamesBySize` and friends

--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -110,8 +110,6 @@ steps:
                 .setAttribute('fullSizeContentView', 'YES');
             file.writeAsStringSync(document.toString());
           }
-      - name: mkdir assets/images
-        mkdir: forge2d_game/assets/images
       - name: Build web app
         path: forge2d_game
         flutter: build web
@@ -138,195 +136,6 @@ steps:
           +  assets:
           +    - assets/
           +    - assets/images/
-      - name: Patch lib/main.dart
-        path: forge2d_game/lib/main.dart
-        patch: |
-          --- b/forge2d_game/step_07/lib/main.dart
-          +++ a/forge2d_game/step_07/lib/main.dart
-          @@ -5,6 +5,8 @@
-           import 'package:flame/game.dart';
-           import 'package:flutter/material.dart';
-           
-          +import 'components/game.dart';
-          +
-           void main() {
-          -  runApp(GameWidget.controlled(gameFactory: FlameGame.new));
-          +  runApp(GameWidget.controlled(gameFactory: MyPhysicsGame.new));
-           }
-      - name: mkdir lib/components
-        mkdir: forge2d_game/lib/components
-      - name: Add lib/components/game.dart
-        path: forge2d_game/lib/components/game.dart
-        replace-contents: |
-          // Copyright 2024 The Flutter Authors. All rights reserved.
-          // Use of this source code is governed by a BSD-style license that can be
-          // found in the LICENSE file.
-
-          import 'dart:async';
-          import 'dart:ui' as ui;
-
-          import 'package:flame/components.dart';
-          import 'package:flame/extensions.dart';
-          import 'package:flame_forge2d/flame_forge2d.dart';
-          import 'package:flutter/services.dart';
-          import 'package:xml/xml.dart';
-          import 'package:xml/xpath.dart';
-
-          import 'background.dart';
-
-          class MyPhysicsGame extends Forge2DGame {
-            MyPhysicsGame()
-                : super(
-                    gravity: Vector2(0, 10),
-                    cameraComponent:
-                        CameraComponent.withFixedResolution(width: 800, height: 600),
-                  );
-
-            late final XmlSpriteSheet aliens;
-            late final XmlSpriteSheet elements;
-            late final XmlSpriteSheet tiles;
-
-            @override
-            FutureOr<void> onLoad() async {
-              final loadedImages = await Future.wait([
-                images.load('colored_grass.png'),
-                images.load('spritesheet_aliens.png'),
-                images.load('spritesheet_elements.png'),
-                images.load('spritesheet_tiles.png'),
-              ]);
-              aliens = XmlSpriteSheet(loadedImages[1],
-                  await rootBundle.loadString('assets/spritesheet_aliens.xml'));
-              elements = XmlSpriteSheet(loadedImages[2],
-                  await rootBundle.loadString('assets/spritesheet_elements.xml'));
-              tiles = XmlSpriteSheet(loadedImages[3],
-                  await rootBundle.loadString('assets/spritesheet_tiles.xml'));
-
-              await world.add(Background(sprite: Sprite(loadedImages[0])));
-
-              return super.onLoad();
-            }
-          }
-
-          class XmlSpriteSheet {
-            XmlSpriteSheet(this.image, String xml) {
-              final document = XmlDocument.parse(xml);
-              for (final node in document.xpath('//TextureAtlas/SubTexture')) {
-                final name = node.getAttribute('name')!;
-                final x = double.parse(node.getAttribute('x')!);
-                final y = double.parse(node.getAttribute('y')!);
-                final width = double.parse(node.getAttribute('width')!);
-                final height = double.parse(node.getAttribute('height')!);
-                _rects[name] = Rect.fromLTWH(x, y, width, height);
-              }
-            }
-
-            final ui.Image image;
-            final _rects = <String, Rect>{};
-
-            Sprite getSprite(String name) {
-              final rect = _rects[name];
-              if (rect == null) {
-                throw ArgumentError('Sprite $name not found');
-              }
-              return Sprite(
-                image,
-                srcPosition: rect.topLeft.toVector2(),
-                srcSize: rect.size.toVector2(),
-              );
-            }
-
-            Map<ui.Size, List<String>> groupSpriteNamesBySize() {
-              final groups = <ui.Size, List<String>>{};
-              for (final entry in _rects.entries) {
-                final size = entry.value.size;
-                groups.putIfAbsent(size, () => []).add(entry.key);
-              }
-
-              return groups;
-            }
-
-            String groupElementsBySizeToString() {
-              final groups = groupSpriteNamesBySize();
-              final buff = StringBuffer();
-              for (final size in groups.keys) {
-                buff.writeln('## Size: $size');
-                final entries = groups[size]!;
-                entries.sort();
-                for (final type in ['Explosive', 'Glass', 'Metal', 'Stone', 'Wood']) {
-                  buff.writeln('### $type');
-                  var where = entries.where((element) => element.contains(type));
-                  if (where.length == 5) {
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.none) => '${where.elementAt(0)}',");
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.some) => '${where.elementAt(1)}',");
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.lots) => '${where.elementAt(4)}',");
-                  } else if (where.length == 10) {
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.none) => '${where.elementAt(3)}',");
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.some) => '${where.elementAt(4)}',");
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.lots) => '${where.elementAt(9)}',");
-                  } else if (where.length == 15) {
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.none) => '${where.elementAt(7)}',");
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.some) => '${where.elementAt(8)}',");
-                    buff.writeln(
-                        "(BrickType.${type.toLowerCase()}, BrickSize.size${size.width.toInt()}x${size.height.toInt()}, BrickDamage.lots) => '${where.elementAt(13)}',");
-                  } else {
-                    buff.writeln(where.toList().join(', '));
-                  }
-                }
-              }
-              return buff.toString();
-            }
-
-            String groupSpriteNamesBySizeToString() {
-              final groups = groupSpriteNamesBySize();
-              final buff = StringBuffer();
-              for (final key in groups.keys) {
-                buff.writeln('## Size: $key');
-                buff.writeln(groups[key]!.toList()
-                  ..sort()
-                  ..join(', '));
-              }
-              return buff.toString();
-            }
-          }
-      - name: Add lib/components/background.dart
-        path: forge2d_game/lib/components/background.dart
-        replace-contents: |
-          // Copyright 2024 The Flutter Authors. All rights reserved.
-          // Use of this source code is governed by a BSD-style license that can be
-          // found in the LICENSE file.
-
-          import 'dart:math';
-
-          import 'package:flame/components.dart';
-
-          import 'game.dart';
-
-          class Background extends SpriteComponent with HasGameReference<MyPhysicsGame> {
-            Background({required super.sprite})
-                : super(
-                    anchor: Anchor.center,
-                    position: Vector2(0, 0),
-                    size: Vector2(100, 100),
-                  );
-
-            @override
-            void onGameResize(Vector2 size) {
-              super.onGameResize(size);
-
-              this.size = Vector2.all(max(
-                game.camera.visibleWorldRect.width,
-                game.camera.visibleWorldRect.height,
-              ));
-            }
-          }
       - name: mkdir assets/images
         mkdir: forge2d_game/assets/images
       - name: Add assets/images/colored_desert.png
@@ -11866,6 +11675,133 @@ steps:
             <SubTexture name="starGold.png" x="140" y="70" width="70" height="70" />
             <SubTexture name="starSilver.png" x="140" y="0" width="70" height="70" />
           </TextureAtlas>
+      - name: mkdir lib/components
+        mkdir: forge2d_game/lib/components
+      - name: Add lib/components/background.dart
+        path: forge2d_game/lib/components/background.dart
+        replace-contents: |
+          // Copyright 2024 The Flutter Authors. All rights reserved.
+          // Use of this source code is governed by a BSD-style license that can be
+          // found in the LICENSE file.
+
+          import 'dart:math';
+
+          import 'package:flame/components.dart';
+
+          import 'game.dart';
+
+          class Background extends SpriteComponent with HasGameReference<MyPhysicsGame> {
+            Background({required super.sprite})
+                : super(
+                    anchor: Anchor.center,
+                    position: Vector2(0, 0),
+                    size: Vector2(100, 100),
+                  );
+
+            @override
+            void onGameResize(Vector2 size) {
+              super.onGameResize(size);
+
+              this.size = Vector2.all(max(
+                game.camera.visibleWorldRect.width,
+                game.camera.visibleWorldRect.height,
+              ));
+            }
+          }
+      - name: Add lib/components/game.dart
+        path: forge2d_game/lib/components/game.dart
+        replace-contents: |
+          // Copyright 2024 The Flutter Authors. All rights reserved.
+          // Use of this source code is governed by a BSD-style license that can be
+          // found in the LICENSE file.
+
+          import 'dart:async';
+          import 'dart:ui' as ui;
+
+          import 'package:flame/components.dart';
+          import 'package:flame/extensions.dart';
+          import 'package:flame_forge2d/flame_forge2d.dart';
+          import 'package:flutter/services.dart';
+          import 'package:xml/xml.dart';
+          import 'package:xml/xpath.dart';
+
+          import 'background.dart';
+
+          class MyPhysicsGame extends Forge2DGame {
+            MyPhysicsGame()
+                : super(
+                    gravity: Vector2(0, 10),
+                    camera: CameraComponent.withFixedResolution(width: 800, height: 600),
+                  );
+
+            late final XmlSpriteSheet aliens;
+            late final XmlSpriteSheet elements;
+            late final XmlSpriteSheet tiles;
+
+            @override
+            FutureOr<void> onLoad() async {
+              final loadedImages = await Future.wait([
+                images.load('colored_grass.png'),
+                images.load('spritesheet_aliens.png'),
+                images.load('spritesheet_elements.png'),
+                images.load('spritesheet_tiles.png'),
+              ]);
+              aliens = XmlSpriteSheet(loadedImages[1],
+                  await rootBundle.loadString('assets/spritesheet_aliens.xml'));
+              elements = XmlSpriteSheet(loadedImages[2],
+                  await rootBundle.loadString('assets/spritesheet_elements.xml'));
+              tiles = XmlSpriteSheet(loadedImages[3],
+                  await rootBundle.loadString('assets/spritesheet_tiles.xml'));
+
+              await world.add(Background(sprite: Sprite(loadedImages[0])));
+
+              return super.onLoad();
+            }
+          }
+
+          class XmlSpriteSheet {
+            XmlSpriteSheet(this.image, String xml) {
+              final document = XmlDocument.parse(xml);
+              for (final node in document.xpath('//TextureAtlas/SubTexture')) {
+                final name = node.getAttribute('name')!;
+                final x = double.parse(node.getAttribute('x')!);
+                final y = double.parse(node.getAttribute('y')!);
+                final width = double.parse(node.getAttribute('width')!);
+                final height = double.parse(node.getAttribute('height')!);
+                _rects[name] = Rect.fromLTWH(x, y, width, height);
+              }
+            }
+
+            final ui.Image image;
+            final _rects = <String, Rect>{};
+
+            Sprite getSprite(String name) {
+              final rect = _rects[name];
+              if (rect == null) {
+                throw ArgumentError('Sprite $name not found');
+              }
+              return Sprite(
+                image,
+                srcPosition: rect.topLeft.toVector2(),
+                srcSize: rect.size.toVector2(),
+              );
+            }
+          }
+      - name: Patch lib/main.dart
+        path: forge2d_game/lib/main.dart
+        patch: |
+          --- b/forge2d_game/step_07/lib/main.dart
+          +++ a/forge2d_game/step_07/lib/main.dart
+          @@ -5,6 +5,8 @@
+           import 'package:flame/game.dart';
+           import 'package:flutter/material.dart';
+           
+          +import 'components/game.dart';
+          +
+           void main() {
+          -  runApp(GameWidget.controlled(gameFactory: FlameGame.new));
+          +  runApp(GameWidget.controlled(gameFactory: MyPhysicsGame.new));
+           }
       - name: Build web app
         path: forge2d_game
         flutter: build web
@@ -11883,8 +11819,8 @@ steps:
       - name: Patch lib/components/game.dart
         path: forge2d_game/lib/components/game.dart
         patch: |
-          --- a/forge2d_game/step_05/lib/components/game.dart
-          +++ b/forge2d_game/step_05/lib/components/game.dart
+          --- b/forge2d_game/step_05/lib/components/game.dart
+          +++ a/forge2d_game/step_05/lib/components/game.dart
           @@ -13,6 +13,7 @@ import 'package:xml/xml.dart';
            import 'package:xml/xpath.dart';
            
@@ -11893,7 +11829,7 @@ steps:
            
            class MyPhysicsGame extends Forge2DGame {
              MyPhysicsGame()
-          @@ -42,9 +43,21 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -41,9 +42,21 @@ class MyPhysicsGame extends Forge2DGame {
                    await rootBundle.loadString('assets/spritesheet_tiles.xml'));
            
                await world.add(Background(sprite: Sprite(loadedImages[0])));
@@ -11983,7 +11919,7 @@ steps:
            
            class MyPhysicsGame extends Forge2DGame {
              MyPhysicsGame()
-          @@ -44,6 +45,7 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -43,6 +44,7 @@ class MyPhysicsGame extends Forge2DGame {
            
                await world.add(Background(sprite: Sprite(loadedImages[0])));
                await addGround();
@@ -11991,7 +11927,7 @@ steps:
            
                return super.onLoad();
              }
-          @@ -58,6 +60,24 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -57,6 +59,24 @@ class MyPhysicsGame extends Forge2DGame {
                }
                return world.addAll(grounds);
              }
@@ -12156,7 +12092,7 @@ steps:
            import 'ground.dart';
            import 'player.dart';
            
-          @@ -46,6 +47,7 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -45,6 +46,7 @@ class MyPhysicsGame extends Forge2DGame {
                await world.add(Background(sprite: Sprite(loadedImages[0])));
                await addGround();
                await addPlayer();
@@ -12164,7 +12100,7 @@ steps:
            
                return super.onLoad();
              }
-          @@ -71,6 +73,20 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -70,6 +72,20 @@ class MyPhysicsGame extends Forge2DGame {
                    ),
                  );
            
