--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -11685,9 +11685,7 @@ steps:
           // found in the LICENSE file.
 
           import 'dart:math';
-
           import 'package:flame/components.dart';
-
           import 'game.dart';
 
           class Background extends SpriteComponent with HasGameReference<MyPhysicsGame> {
@@ -11695,14 +11693,13 @@ steps:
                 : super(
                     anchor: Anchor.center,
                     position: Vector2(0, 0),
-                    size: Vector2(100, 100),
                   );
 
             @override
-            void onGameResize(Vector2 size) {
-              super.onGameResize(size);
+            void onMount() {
+              super.onMount();
 
-              this.size = Vector2.all(max(
+              size = Vector2.all(max(
                 game.camera.visibleWorldRect.width,
                 game.camera.visibleWorldRect.height,
               ));
