--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -11737,20 +11737,21 @@ steps:
 
             @override
             FutureOr<void> onLoad() async {
-              final loadedImages = await Future.wait([
+              final [backgroundImage, aliensImage, elementsImage, tilesImage] =
+                  await Future.wait([
                 images.load('colored_grass.png'),
                 images.load('spritesheet_aliens.png'),
                 images.load('spritesheet_elements.png'),
                 images.load('spritesheet_tiles.png'),
               ]);
-              aliens = XmlSpriteSheet(loadedImages[1],
+              aliens = XmlSpriteSheet(aliensImage,
                   await rootBundle.loadString('assets/spritesheet_aliens.xml'));
-              elements = XmlSpriteSheet(loadedImages[2],
+              elements = XmlSpriteSheet(elementsImage,
                   await rootBundle.loadString('assets/spritesheet_elements.xml'));
-              tiles = XmlSpriteSheet(loadedImages[3],
+              tiles = XmlSpriteSheet(tilesImage,
                   await rootBundle.loadString('assets/spritesheet_tiles.xml'));
 
-              await world.add(Background(sprite: Sprite(loadedImages[0])));
+              await world.add(Background(sprite: Sprite(backgroundImage)));
 
               return super.onLoad();
             }
@@ -11826,10 +11827,10 @@ steps:
            
            class MyPhysicsGame extends Forge2DGame {
              MyPhysicsGame()
-          @@ -41,9 +42,21 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -42,9 +43,21 @@ class MyPhysicsGame extends Forge2DGame {
                    await rootBundle.loadString('assets/spritesheet_tiles.xml'));
            
-               await world.add(Background(sprite: Sprite(loadedImages[0])));
+               await world.add(Background(sprite: Sprite(backgroundImage)));
           +    await addGround();
            
                return super.onLoad();
@@ -11905,10 +11906,9 @@ steps:
       - name: Patch lib/components/game.dart
         path: forge2d_game/lib/components/game.dart
         patch: |
-          --- b/forge2d_game/step_07/lib/components/game.dart
-          +++ a/forge2d_game/step_07/lib/components/game.dart
-          @@ -13,7 +13,8 @@ import 'package:xml/xml.dart';
-           import 'package:xml/xpath.dart';
+          --- b/forge2d_game/step_06/lib/components/game.dart
+          +++ a/forge2d_game/step_06/lib/components/game.dart
+          @@ -14,6 +14,7 @@ import 'package:xml/xpath.dart';
            
            import 'background.dart';
            import 'ground.dart';
@@ -11916,15 +11916,15 @@ steps:
            
            class MyPhysicsGame extends Forge2DGame {
              MyPhysicsGame()
-          @@ -43,6 +44,7 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -44,6 +45,7 @@ class MyPhysicsGame extends Forge2DGame {
            
-               await world.add(Background(sprite: Sprite(loadedImages[0])));
+               await world.add(Background(sprite: Sprite(backgroundImage)));
                await addGround();
           +    await addPlayer();
            
                return super.onLoad();
              }
-          @@ -57,6 +59,24 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -58,6 +60,24 @@ class MyPhysicsGame extends Forge2DGame {
                }
                return world.addAll(grounds);
              }
@@ -12090,14 +12090,14 @@ steps:
            import 'player.dart';
            
           @@ -45,6 +46,7 @@ class MyPhysicsGame extends Forge2DGame {
-               await world.add(Background(sprite: Sprite(loadedImages[0])));
+           
+               await world.add(Background(sprite: Sprite(backgroundImage)));
                await addGround();
-               await addPlayer();
           +    await addBricks();
+               await addPlayer();
            
                return super.onLoad();
-             }
-          @@ -70,6 +72,20 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -71,6 +73,20 @@ class MyPhysicsGame extends Forge2DGame {
                    ),
                  );
            
